k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlops-app
  namespace: default
  labels:
    app: mlops-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mlops-app
  template:
    metadata:
      labels:
        app: mlops-app
    spec:
      containers:
        - name: mlops-app
          image: velat/mlops-app:latest
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
