k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlops-app-service
  namespace: default
spec:
  selector:
    app: mlops-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: LoadBalancer
